update officers.html - create 3x3 grid of cards, add glass morphism effect to cards, add background image

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -15,7 +15,7 @@ sitemap: community/sbw
 
 
 <p>
-    <a class="uk-button uk-button-default uk-button-primary uk-border-rounded" href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">Register</a>
+    <a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">Register</a>
 </p>
 <h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
 
@@ -140,7 +140,7 @@ sitemap: community/sbw
 </div>
 
 
-<h3>Hotel Information</h3>
+<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Hotel Information</h4>
 <p>
 A room block is available at Hilton St. Louis Frontenac for February 16th, 2025, through February 20th, 2025. 
 Please make reservations by <b>Friday January 24th, 2025</b>, to ensure group discount. 
@@ -173,10 +173,10 @@ Your room reservations will help offset the costs of the meeting rooms throughou
         <p>The Commercial Soybean Breeders executive board will have an area available for participants to put their company job postings. If interested, please bring several informational copies of your open positions.</p>
         </div>
     </div>
-<a href="/community/sbw/officers.html">View the Soybean Breeders Workshop Officers</a>
+<a class="uk-text-bold" href="/community/sbw/officers.html">View the Soybean Breeders Workshop Officers</a>
 <br> <br>
 
-<a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/general_info/bylaws/BYLAWS_OF_COMMERCIAL_SOYBEAN_BREEDERS.pdf" target="_blank">View the By-Laws of Commerical Soybean Breeders</a>
+<a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/general_info/bylaws/BYLAWS_OF_COMMERCIAL_SOYBEAN_BREEDERS.pdf" target="_blank">View the By-Laws of Commerical Soybean Breeders</a>
 
 
 <script>
