update officers.html - change to smaller info card and center text, registration.html - change to smaller speaker cards and center to page

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -47,11 +47,12 @@ sitemap: community/sbw
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Speakers</h4>
 
-<div class="uk-child-width-1-2@m uk-grid-medium" uk-grid>
+<div class="uk-child-width-1-4@m uk-grid-medium uk-text-center" uk-grid>
+    <div></div>
     <div>
         <div class="uk-card uk-card-default uk-border-rounded">
             <div class="uk-card-media-top">
-                <img class=" uk-margin-medium-left uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Jan_Leach.png" width="200" height="200" alt="Dr. Jan Leach">
+                <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Jan_Leach.png" width="200" height="200" alt="Dr. Jan Leach">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
@@ -64,7 +65,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded">
             <div class="uk-card-media-top">
-                <img class=" uk-margin-medium-left uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Carl_Bradley.png" width="200" height="200" alt="Dr. Carl Bradley">
+                <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Carl_Bradley.png" width="200" height="200" alt="Dr. Carl Bradley">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
@@ -74,8 +75,8 @@ sitemap: community/sbw
             </div>
         </div>
     </div>
-</div>
 
+</div>
 
 <h1 class="uk-heading-divider"></h1>
 
@@ -173,11 +174,15 @@ Your room reservations will help offset the costs of the meeting rooms throughou
         <p>The Commercial Soybean Breeders executive board will have an area available for participants to put their company job postings. If interested, please bring several informational copies of your open positions.</p>
         </div>
     </div>
-<a class="uk-text-bold" href="/community/sbw/officers.html">View the Soybean Breeders Workshop Officers</a>
-<br> <br>
 
-<a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/general_info/bylaws/BYLAWS_OF_COMMERCIAL_SOYBEAN_BREEDERS.pdf" target="_blank">View the By-Laws of Commerical Soybean Breeders</a>
-
+<div class="uk-margin-medium-top">
+        <div class="uk-margin">
+           <a class="uk-text-bold" href="/community/sbw/officers.html"> <span class="uk-margin-right-small" uk-icon="icon: users; ratio: 1.5"></span> View the Soybean Breeders Workshop Officers</a>
+        </div>
+        <div>
+            <a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/general_info/bylaws/BYLAWS_OF_COMMERCIAL_SOYBEAN_BREEDERS.pdf" target="_blank">View the By-Laws of Commerical Soybean Breeders</a>
+        </div>
+</div>
 
 <script>
 
