--- a/community/sbw/officers.html
+++ b/community/sbw/officers.html
@@ -12,11 +12,11 @@ sitemap: community/sbw
 <h1 class="uk-heading-divider uk-margin-remove-top"></h1>
 
     
-<div class="uk-child-width-1-3@m uk-grid-medium uk-grid-match uk-background-contain" data-src="/assets/img/sbw/SBW_logo.png?fit=crop&w=650&h=433&q=80" uk-img uk-grid>
+<div class="uk-child-width-1-4@m uk-grid-medium uk-grid-match uk-background-contain uk-text-center" data-src="/assets/img/sbw/SBW_logo.png?fit=crop&w=650&h=433&q=80" uk-img uk-grid>
     <div>
         <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                 <div class="uk-card-media-top">
-                    <img src="/assets/img/sbw/officers/SBW_officer_Keith_Rincker.png"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Keith Rincker">
+                    <img src="/assets/img/sbw/officers/SBW_officer_Keith_Rincker.png"  class="uk-margin-medium-top" width="200" height="200" alt="Keith Rincker">
                 </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Keith Rincker</h3>
@@ -28,7 +28,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Ben_Hall.png"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Ben Hall">
+                        <img src="/assets/img/sbw/officers/SBW_Officer_Ben_Hall.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ben Hall">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Ben Hall</h3>
@@ -41,7 +41,7 @@ sitemap: community/sbw
             <div>
                 <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                         <div class="uk-card-media-top">
-                            <img src="/assets/img/sbw/officers/SBW_officer_Aaron_Lorenz.png"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Aaron Lorenz">
+                            <img src="/assets/img/sbw/officers/SBW_officer_Aaron_Lorenz.png"  class="uk-margin-medium-top" width="200" height="200" alt="Aaron Lorenz">
                         </div>
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">Aaron Lorenz</h3>
@@ -54,7 +54,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Rex_Nelson.png"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Rex Nelson">
+                        <img src="/assets/img/sbw/officers/SBW_Officer_Rex_Nelson.png"  class="uk-margin-medium-top" width="200" height="200" alt="Rex Nelson">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Rex Nelson</h3>
@@ -69,7 +69,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_JD_Campbell.JPG"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Jacqueline Campbell">
+                        <img src="/assets/img/sbw/officers/SBW_Officer_JD_Campbell.JPG"  class="uk-margin-medium-top" width="200" height="200" alt="Jacqueline Campbell">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Jacqueline Campbell</h3>
@@ -81,7 +81,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Nicole_Choquett.jpg"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Nicole Choquett">
+                        <img src="/assets/img/sbw/officers/SBW_Officer_Nicole_Choquett.jpg"  class="uk-margin-medium-top" width="200" height="200" alt="Nicole Choquett">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Nicole Choquette</h3>
@@ -93,7 +93,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Cleiton_Wartha.png"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Cleiton Wartha">
+                        <img src="/assets/img/sbw/officers/SBW_Officer_Cleiton_Wartha.png"  class="uk-margin-medium-top" width="200" height="200" alt="Cleiton Wartha">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Cleiton Wartha</h3>
@@ -105,7 +105,7 @@ sitemap: community/sbw
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
-                        <img src="/assets/img/sbw/officers/SBW_Officer_Ian_McNish.png"  class=" uk-margin-medium-left uk-margin-medium-top" width="200" height="200" alt="Ian McNish">
+                        <img src="/assets/img/sbw/officers/SBW_Officer_Ian_McNish.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ian McNish">
                     </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Ian McNish</h3>
