--- a/community/sbw/SBW/SBW_2017.html
+++ b/community/sbw/SBW/SBW_2017.html
@@ -20,8 +20,9 @@ Commercial Soybean Breeders - <strong>Evelyn Ortiz-Perez</strong> (Dow AgroScien
 
 <h3>Monday February 13th, 2017 | Versailles 1 Room</h3>
 
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead></thead>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
         <tr>
             <th class="uk-table-shrink">Start</th>
             <th class="uk-table-shrink">End</th>
@@ -44,7 +45,7 @@ Commercial Soybean Breeders - <strong>Evelyn Ortiz-Perez</strong> (Dow AgroScien
     <tr><td>4:55</td><td>5:00</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Announcements and Adjourn</td></tr>
 </body>
 </table>
-
+</div>
 <h3>Tuesday Morning February 14th, 2017</h3>
 
 <h4>Continental Breakfast | 7:00 am - 8:00 am| Versailles Foyer</h4>
@@ -56,8 +57,9 @@ Hosted by the Commercial Soybean Breeders
 <p>Chair, Public Soybean Breeder: Bo Zhang - Virginia Tech.<br />
 Co-Chair, Public Crop Physiologist: Felix Fritschi - Univ. of Missouri  </p>
 
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead></thead>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+    <thead>
         <tr>
             <th class="uk-table-shrink">Start</th>
             <th class="uk-table-shrink">End</th>
@@ -92,12 +94,13 @@ Co-Chair, Public Crop Physiologist: Felix Fritschi - Univ. of Missouri  </p>
     <tr><td>5:30</td><td>6:30</td><td colspan='2'>Social Hour & Poster Session, Foyer & Versailles 2</td></tr>
 </tbody>
 </table>
-
+</div>
 
 <h3>Wednesday February 15th, 2017 | Versailles 1 Room</h3>
 
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead></thead>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+    <thead>
         <tr>
             <th class="uk-table-shrink">Start</th>
             <th class="uk-table-shrink">End</th>
@@ -117,6 +120,7 @@ Co-Chair, Public Crop Physiologist: Felix Fritschi - Univ. of Missouri  </p>
     <tr><td>10:30</td><td>10:35</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Adjourn</td></tr>
 </body>
 </table>
+</div>
 
 <h3>SPECIAL MEETINGS and WORKSHOPS</h3>
 
