projects/SoyNAM/index.html -  remove dl tags that surrounds ul to fix pa11y errors

--- a/projects/SoyNAM/index.html
+++ b/projects/SoyNAM/index.html
@@ -14,22 +14,20 @@ redirect_from: /SoyNAM/
   See further <a href="/projects/soynam_2014/">details about the SoyNAM Project</a>. 
   Funding was provided by the North Central Soybean research Program (<a href="https://ncsrp.com">NCSRP</a>) 
   and the United Soybean Board (<a href="https://www.unitedsoybean.org">USB</a>).
-<dl>
-  <dd> 
-    <strong>Request seed</strong>
-    <ul>
-        <li><a href="/projects/SoyNAM/SoyNAM_Parent_request.html">Click here to request Parent seed.</a></li>
-        <li><a href="/projects/SoyNAM/SoyNAM_RIL_request.html">Click here to request RIL seed.</a></li>
-        <li><a href="https://data.soybase.org/annex/Glycine/max/projects/SoyNAM/MTA_for_NAM_Parent_Seed_Distribution_version_2024-09-15.docx">Material Transfer Agreement (MTA) for seed requests.</a></li>
+
+    <p><strong>Request seed</strong></p>
+    <ul class="uk-list uk-list-disc">
+        <li class="uk-margin-remove-vertical"><a href="/projects/SoyNAM/SoyNAM_Parent_request.html">Click here to request Parent seed.</a></li>
+        <li class="uk-margin-remove-vertical"><a href="/projects/SoyNAM/SoyNAM_RIL_request.html">Click here to request RIL seed.</a></li>
+        <li class="uk-margin-remove-vertical"><a href="https://data.soybase.org/annex/Glycine/max/projects/SoyNAM/MTA_for_NAM_Parent_Seed_Distribution_version_2024-09-15.docx">Material Transfer Agreement (MTA) for seed requests.</a></li>
     </ul>
-  </dd>
-</dl> 
+
 </p>
 <p>
   <strong>See links below for information about each line: images, phenotypes, and associated data.</strong>
 </p>
 
-<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-striped uk-overflow-auto">
   <thead>
     <tr>
       <th>High yielding</th>
