Added more text

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -23,7 +23,7 @@ sitemap: community/sbw
 
 <h4 class="uk-text-bold">New for 2025</h4>
 
-    <p> NEED to ADD text about the new hotel location!
+    <p> The Soybean Breeders' Workshop has moved to a different location. The 2025 Soybean Breeders' Workshop will be held in the <a href="https://www.hilton.com/en/hotels/stlfhhf-hilton-st-louis-frontenac/?SEO_id=GMB-AMER-HH-STLFHHF&y_source=1_MTIyMDc4Ni03MTUtbG9jYXRpb24ud2Vic2l0ZQ%3D%3D" target="_blank">Hilton St. Louis Frontenac</a>.  
         <br> <br>
         This year the volunteered oral presentations on Wednesday morning will be selected from the poster abstracts. Abstracts must be submitted by <b>January 10</b> to be considered for an oral presentation
      </p>
