Finalize text on pages

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -30,8 +30,10 @@ sitemap: community/sbw
     
     
 <h4 class="uk-text-bold">Poster Presentation and Judging Information</h4>
-    <p>The poster session will be during the evening social hour. Anyone is welcome to display a poster. There will be a graduate student competition, sponsored by the commercial soybean breeders, during the poster session.
-        Cash prizes will be awarded Wednesday morning. Please submit the poster abstract before January 10, 2025 to be considered in the Lighting Talk selection. Please <a href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">register</a> to submit a poster abstract.</p>
+    <p>The poster session and graduate student poster competition will be held in conjunction with the evening social hour. Anyone is welcome to display a poster. 
+    Cash prizes will be awarded to the winners Wednesday morning of the Workshop. <b>Please be sure to submit poster abstracts by January 10 to be considered for a 15-minute oral presentation to occur Wednesday morning.</b>  
+    Please <a href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">register</a> to submit a poster abstract.
+    </p>
 <div class="uk-margin">
     <button class="uk-button uk-button-primary uk-button-small uk-border-rounded" type="button" uk-toggle="target: #details-1; animation: uk-animation-fade; cls: uk-hidden" onclick="rotateTriangle(this)" value="details-1-triangle"><div class="uk-flex">details<span id="details-1-triangle" uk-icon="icon:triangle-right" class="toggle-top-margin"></span></div></button>
     <div id="details-1" class="uk-margin-small uk-hidden">
@@ -39,7 +41,7 @@ sitemap: community/sbw
         <li>Anyone is welcome to display a poster. Posters previously presented at other meetings are welcome.</li>
         <li>Poster display space is nominally 36 inches by 48 inches</li>
         <li>Poster abstracts will be accepted until January 31, 2025 </li>
-        <li>Posters can be put up in the morning of Monday and must be up by noon on Tuesday, in order to be considered for awards.</li>
+        <li>Posters may be hung up as early as Monday morning, and must remain up until noon on Tuesday in order to be considered for competition awards.</li>
         <li>Posters must be removed by noon on Wednesday.</li>
         <li>Student Posters will be judged and awards given for the 1st ($300), 2nd ($200), 3rd ($100) place winners.</li>
         <li>Awards will be presented on Wednesday morning during the opening Welcome and Announcements. If you are not present, you will be notified by email and the award will be sent to you by mail.</li>
@@ -64,7 +66,7 @@ sitemap: community/sbw
                     </tr>
                     <tr>
                         <td>Data Visualation Workshop</td>
-                        <td class="uk-text-right">$100</td>
+                        <td class="uk-text-right">$75</td>
                     </tr>
                 </tbody>
             </table>
