--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -15,7 +15,6 @@ sitemap: community/sbw
   <a href="https://www.google.com/maps/place/Hilton+St.+Louis+Frontenac/@38.6341961,-90.4097409,17z/data=!4m9!3m8!1s0x87d8ccdc51b5c88d:0x7035e9e66f84beb7!5m2!4m1!1i2!8m2!3d38.6341961!4d-90.407166!16s%2Fg%2F1vnnjylv?entry=ttu" target="_blank">1335 S Lindbergh Blvd, St. Louis, MO 63131</a>
 </div>
 
-
 <p>
     <a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">Register</a>
 </p>
@@ -87,13 +86,31 @@ sitemap: community/sbw
                 </tbody>
             </table>
         </div>
-    
+</div>
+
+<h1 class="uk-heading-divider"></h1>
+
+<div>
+    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+        <div class="uk-card-media-left uk-cover-container">
+            <img src="/assets/img/sbw/2025/SBW2025_Workshop_image.png" alt="Figure that shows significant marker trait associations">
+        </div>
+        <div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">From Data to Insight: Effective Visualization Techniques in Science</h3>
+                <p>This interactive workshop offers a comprehensive introduction to data visualization techniques specifically tailored for plant breeding and biological research. Open to participants of all skill levels, the workshop will delve into key principles for creating clear, effective, and reproducible visualizations that enhance scientific communication. Participants will learn how to select the most appropriate types of visualizations for various data sets, design compelling figures, and adapt visual content for different platforms, including manuscripts, conference posters, and presentations.</p>
+            </div>
+            <div class="uk-card-footer">
+                <a href="/community/sbw/workshop.html" class="uk-button uk-button-text">Read more</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Speakers</h4>
 
-<div class="uk-child-width-1-4@m uk-grid-medium uk-text-center" uk-grid>
-    <div></div>
+<div class="uk-child-width-1-3@m uk-grid-medium uk-text-center uk-grid-match" uk-grid>
+  
     <div>
         <div class="uk-card uk-card-default uk-border-rounded">
             <div class="uk-card-media-top">
@@ -134,27 +151,6 @@ sitemap: community/sbw
         </div>
     </div>
 </div>
-
-<h1 class="uk-heading-divider"></h1>
-
-<div>
-    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin uk-border-rounded" uk-grid>
-        <div class="uk-card-media-left uk-cover-container">
-            <img src="/assets/img/sbw/2025/SBW2025_Workshop_image.png" alt="Figure that shows significant marker trait associations" uk-cover>
-            <canvas width="600" height="400"></canvas>
-        </div>
-        <div>
-            <div class="uk-card-body">
-                <h3 class="uk-card-title">From Data to Insight: Effective Visualization Techniques in Science</h3>
-                <p>This interactive workshop offers a comprehensive introduction to data visualization techniques specifically tailored for plant breeding and biological research. Open to participants of all skill levels, the workshop will delve into key principles for creating clear, effective, and reproducible visualizations that enhance scientific communication. Participants will learn how to select the most appropriate types of visualizations for various data sets, design compelling figures, and adapt visual content for different platforms, including manuscripts, conference posters, and presentations.</p>
-            </div>
-            <div class="uk-card-footer">
-                <a href="/community/sbw/workshop.html" class="uk-button uk-button-text">Read more</a>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Hotel Information</h4>
 <p>
