--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -109,10 +109,9 @@ sitemap: community/sbw
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Speakers</h4>
 
-<div class="uk-child-width-1-3@m uk-grid-medium uk-text-center uk-grid-match" uk-grid>
-  
+<div class="uk-text-center uk-grid-match uk-flex uk-flex-center" uk-grid>
     <div>
-        <div class="uk-card uk-card-default uk-border-rounded">
+        <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
                 <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Jan_Leach.png" width="200" height="200" alt="Dr. Jan Leach">
             </div>
@@ -125,7 +124,7 @@ sitemap: community/sbw
         </div>
     </div>
     <div>
-        <div class="uk-card uk-card-default uk-border-rounded">
+        <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
                 <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Carl_Bradley.png" width="200" height="200" alt="Dr. Carl Bradley">
             </div>
@@ -138,7 +137,7 @@ sitemap: community/sbw
         </div>
     </div>
     <div>
-        <div class="uk-card uk-card-default uk-border-rounded">
+        <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
                 <img class="uk-margin-medium-top" src="/assets/img/sbw/2025/SBW2025_Cory_Hirsch.jpg" width="200" height="200" alt="Dr. Cory Hirsch">
             </div>
