--- a/about/index.html
+++ b/about/index.html
@@ -23,6 +23,5 @@ tools_menu: false
 <a name="contact" id="contact">
 <iframe
   src="https://forms.office.com/Pages/ResponsePage.aspx?id=5zZb7e4BvE6GfuA8-g1Glykqlk2qz6REpva4KviuwwxUNjZVSkM2TUI2NjdVSVZVVDRYUEZHSEZDRSQlQCN0PWcu&embed=true"
-  class="uk-height-1-1 uk-width-1-1"
-  ></iframe>
+  class="uk-height-1-1 uk-width-1-1 uk-margin-large-bottom"></iframe>
 </a>
