--- a/resources/index.html
+++ b/resources/index.html
@@ -5,7 +5,7 @@ sitemap: sequence map
 tools_menu: true
 ---
 
-{% capture jbrowse_base_url %}/assets/js/jbrowse{% endcapture %}
+{% capture jbrowse_base_url %}/tools/browsers/jbrowse{% endcapture %}
 {% assign genus = "Glycine" %}
 
 {% for about_file in site.data.datastore-metadata[genus].GENUS.about_this_collection %}
