--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -34,7 +34,7 @@ gbrowse_instances:
 
 ---
 
-{% capture jbrowse_base_url %}/assets/js/jbrowse{% endcapture %}
+{% capture jbrowse_base_url %}/tools/browsers/jbrowse{% endcapture %}
 <h2>Genome browsers</h2>
 
 <p>
