community/sbw/ - update card styling, update title to all nav bar parent pages to <h1> this will make it more consistent

--- a/maps/index.html
+++ b/maps/index.html
@@ -10,7 +10,7 @@ redirect_from: /sbt/
 {% assign map_resource = site.data.map_resources %}
 {% assign map_cmap = site.data.map_cmap %}
 
-<h2><b>Genetic Map Resources for Soybean</b></h2>
+<h1>Genetic Map Resources for Soybean</h1>
 
 <p>
   Maps below show QTLs and GWAS features. Click a chromosome number to go to the corresponding linkage group views. 
