--- a/resources/index.html
+++ b/resources/index.html
@@ -16,7 +16,7 @@ tools_menu: true
 {% endfor %}
 
 <h1>
-  <i>{{ genus_resources.genus }}</i>
+  {{ genus_resources.genus }}
   ({{ genus_resources.commonName }})</h2>
 <p>{{ genus_resources.description }}</p>
 <p>NCBI taxonomy ID:
