create custom width for homepage input

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ blog_card: true
     <form action="https://mines.legumeinfo.org/glycinemine/keywordSearchResults.do" name="search" method="get" target="_blank">
       <div class="uk-text-left">
         <label class="uk-text-bold" for="quickSearchInput">Keyword Search</label><br>
-      <input class="uk-input uk-form-small uk-form-width-medium uk-text-primary uk-text-italic"  type="text" id="quickSearchInput" name="searchTerm"
+      <input class="uk-input uk-form-small custom-width uk-text-primary uk-text-italic"  type="text" id="quickSearchInput" name="searchTerm"
       value="&quot;seed weight&quot;" onFocus="clearElement(this);" />
       <button type="submit" id="quickSearchButton" name="searchSubmit" class="uk-button uk-button-primary uk-button-small uk-margin-small">GO</button>
     </div>
@@ -35,7 +35,7 @@ blog_card: true
     <form action="/tools/search/gene.html" name="search" method="get">
   <div class="uk-text-left">
     <label class="uk-text-bold" for="identifier">Gene identifier search</label><br>
-    <input class="uk-input uk-form-small uk-form-width-medium uk-text-primary uk-text-italic" id="identifier" type="text" name="identifier"
+    <input class="uk-input uk-form-small custom-width  uk-text-primary uk-text-italic" id="identifier" type="text" name="identifier"
     value="Glyma.15g026400" onFocus="clearElement(this);" />
     <button type="submit" id="quickSearchButton" name="searchSubmit" class="uk-button uk-button-primary uk-button-small uk-margin-small">GO</button>
   </div>
@@ -47,7 +47,7 @@ blog_card: true
       <div class="uk-text-left">
         <label class="uk-text-bold" for="q">Synteny viewer</label><br>
         <input type="hidden" id="sources" name="sources" value="soybase,liu2020">
-        <input class="uk-input uk-form-small uk-form-width-medium uk-text-primary uk-text-italic" id="q" type="text" name="q"
+        <input class="uk-input uk-form-small custom-width uk-text-primary uk-text-italic" id="q" type="text" name="q"
         value="Glyma.20G010000" onFocus="clearElement(this);" />
         <button type="submit" id="quickSearchButton" name="searchSubmit" class="uk-button uk-button-primary uk-button-small uk-margin-small">GO</button>
       </div>
